Cambios al codigo para Arq.Hexagonal